<brendamoniqueb, @julianemartins> corrige rota de login assistente do hospital

--- a/app/src/main/resources/static/css/style.css
+++ b/app/src/main/resources/static/css/style.css
@@ -197,3 +197,7 @@ button {
 .ml-10 {
     margin-left: 10px;
 }
+
+.box-shadow {
+    box-shadow: 0 6px 3px rgba(10, 10, 10, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.1);
+}
