--- a/app/src/main/resources/templates/partes/cabecalhoDadosSolicitante.html
+++ b/app/src/main/resources/templates/partes/cabecalhoDadosSolicitante.html
@@ -1,5 +1,5 @@
 <div class="column centralizar" xmlns:th="http://www.thymeleaf.org">
-    <div class="box">
+    <div class="box box-shadow">
         <p class="centralizar">
             <b>Informações Paciente</b>
         </p>
