--- a/app/src/main/resources/templates/solicitacao/listagens/listaGerenciamentoHospede.html
+++ b/app/src/main/resources/templates/solicitacao/listagens/listaGerenciamentoHospede.html
@@ -13,6 +13,14 @@
                 <div>
                     <h1 class="title is-half centralizar espacamento">Lista de Gerenciamento de Hospede</h1>
 
+                    <div class="section">
+                        <nav class="breadcrumb" aria-label="breadcrumbs">
+                            <ul>
+                                <li><a th:href="@{'/bemvindo'}" class="has-text-black" href="#" aria-current="page">Inicio</a></li>
+                                <li><a th:href="@{'/solicitacao/listagemHospede'}">Gerenciar Hóspedes</a></li>
+                            </ul>
+                        </nav>
+                    </div>
                     <div class="is-mobile is-centered">
                         <div class="is-mobile is-centered"></div>
                         <table class="table centralizar">
