--- a/app/src/main/resources/templates/quarto/listagens/listaQuartos.html
+++ b/app/src/main/resources/templates/quarto/listagens/listaQuartos.html
@@ -17,7 +17,7 @@
 
             <th:block th:each="quarto : ${listaQuartos}">
                 <div class="column is-3">
-                    <div class="box">
+                    <div class="box box-shadow">
                         <div class="column">
                             <a  class="centralizar" th:href="@{/quarto/{idSolicitacao}/quarto/{idQuarto}(idSolicitacao=${solicitacao.id}, idQuarto=${quarto.id})}">
                                 <button type="reset" class="button borda-arredondada verde-viavida "  th:if="${quarto.leitosDisponiveis <= 0 || numeroHospedes > quarto.leitosDisponiveis}" th:text="${quarto.nomeQuarto}"></button>
@@ -37,9 +37,15 @@
             </th:block>
         </div>
     </div>
-    <div class="column has-text-centered">
-        <a class="button verde-viavida borda-arredondada" th:href="@{/solicitacao/casa/lista}">Voltar</a>
-    </div>
+        <div class="section">
+            <nav class="breadcrumb" aria-label="breadcrumbs">
+                <ul>
+                    <li><a th:href="@{'/bemvindo'}" class="has-text-black" href="#" aria-current="page">Inicio</a></li>
+                    <li><a th:href="@{'/solicitacao/casa/lista'}" class="has-text-black" href="#" aria-current="page">Solicitação</a></li>
+                    <li><a th:href="@{'/quarto/' + ${solicitacao.id} + '/listaQuartos'}">Lista de solicitações da casa</a></li>
+                </ul>
+            </nav>
+        </div>
 </main>
 </body>
 </html>
