--- a/app/src/main/resources/templates/quarto/quarto.html
+++ b/app/src/main/resources/templates/quarto/quarto.html
@@ -10,19 +10,26 @@
     <div sec:authorize="hasAuthority(T(com.thoughtworks.aceleradora.login.dominio.Cargo).ADMINISTRADOR.getNome())">
     <div th:include="@{./partes/cabecalhoDadosSolicitante}"/>
 
-    <div class="column has-text-centered">
-        <a class="button verde-viavida borda-arredondada" th:href="@{/quartos/{id}/listaQuartos(id=${solicitacao.id})}">Voltar</a>
-    </div>
 
-    <h1 class="title is-half centralizar espacamento-titulo" th:text="'Quarto: ' + ${quarto.nomeQuarto}"></h1>
+        <h1 class="title is-half centralizar espacamento-titulo" th:text="'Quarto: ' + ${quarto.nomeQuarto}"></h1>
 
-    <div class="is-mobile is-centered">
-        <h2 class="title is-2 is-half centralizar espacamento-titulo">Ocupado por:</h2>
+        <div class="is-mobile is-centered">
+            <h2 class="title is-2 is-half centralizar espacamento-titulo">Ocupado por:</h2>
+            <div class="section">
+                <nav class="breadcrumb" aria-label="breadcrumbs">
+                    <ul>
+                        <li><a th:href="@{'/bemvindo'}" class="has-text-black" href="#" aria-current="page">Inicio</a></li>
+                        <li><a th:href="@{'/solicitacao/casa/lista'}" class="has-text-black" href="#" aria-current="page">Solicitação</a></li>
+                        <li><a th:href="@{'/quarto/' + ${solicitacao.id} + '/listaQuartos'}" class="has-text-black" href="#" aria-current="page">Lista de solicitações da casa</a></li>
+                        <li><a th:href="@{'/quarto/' + ${solicitacao.id} + '/quarto/' + ${quarto.id}}">Dados quarto</a></li>
+                    </ul>
+                </nav>
+            </div>
 
-        <th:block th:each="ocupante : ${ocupantes}">
-            <div class="centralizar">
-                <p>
-                    <label>
+            <th:block th:each="ocupante : ${ocupantes}">
+                <div class="centralizar">
+                    <p>
+                        <label>
                         <strong>Nome:</strong>
                     </label>
                     <label th:text="${ocupante.nome}"></label>
