--- a/app/src/main/resources/templates/registrarUsuario/registrar.html
+++ b/app/src/main/resources/templates/registrarUsuario/registrar.html
@@ -7,6 +7,14 @@
 <main>
     <div class="container card-content valign center has-text-centered">
         <h1 class="title titulo-h1">Formulário de Registro do Hospebem</h1>
+        <div class="section">
+            <nav class="breadcrumb" aria-label="breadcrumbs">
+                <ul>
+                    <li><a th:href="@{'/bemvindo'}" class="has-text-black" href="#" aria-current="page">Inicio</a></li>
+                    <li><a th:href="@{'/registrar'}">Registrar</a></li>
+                </ul>
+            </nav>
+        </div>
         <form action="" th:action="@{/registrar}" th:object="${formUsuario}" method="post" onsubmit="return validaRegistrar(event)" id="registraAss">
             <div th:if="${#fields.hasAnyErrors()}">
                 <p th:each="err : ${#fields.errors()}" th:text="${err}"></p>
