--- a/app/src/main/resources/templates/quarto/listagens/listaQuartos.html
+++ b/app/src/main/resources/templates/quarto/listagens/listaQuartos.html
@@ -8,13 +8,22 @@
 <main>
     <div  sec:authorize="hasAuthority(T(com.thoughtworks.aceleradora.login.dominio.Cargo).ASSISTENTE_SOCIAL.getNome())"> Você não tem autorização para acessar essa página</div>
     <div sec:authorize="hasAuthority(T(com.thoughtworks.aceleradora.login.dominio.Cargo).ADMINISTRADOR.getNome())">
-    <div th:include="@{./partes/cabecalhoDadosSolicitante}"/>
+        <div class="container">
+        <div class="section">
+            <nav class="breadcrumb" aria-label="breadcrumbs">
+                <ul>
+                    <li><a th:href="@{'/bemvindo'}" class="has-text-black" href="#" aria-current="page">Inicio</a></li>
+                    <li><a th:href="@{'/solicitacao/casa/lista'}" class="has-text-black" href="#" aria-current="page">Solicitação</a></li>
+                    <li><a th:href="@{'/quarto/' + ${solicitacao.id} + '/listaQuartos'}">Lista de solicitações da casa</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div th:include="@{./partes/cabecalhoDadosSolicitante}"/>
     <div class="column">
         <h3 class="title is-3 v center has-text-centered">Quartos</h3>
     </div>
     <div class="section">
         <div class="columns is-multiline is-lefty">
-
             <th:block th:each="quarto : ${listaQuartos}">
                 <div class="column is-3">
                     <div class="box box-shadow">
@@ -37,14 +46,6 @@
             </th:block>
         </div>
     </div>
-        <div class="section">
-            <nav class="breadcrumb" aria-label="breadcrumbs">
-                <ul>
-                    <li><a th:href="@{'/bemvindo'}" class="has-text-black" href="#" aria-current="page">Inicio</a></li>
-                    <li><a th:href="@{'/solicitacao/casa/lista'}" class="has-text-black" href="#" aria-current="page">Solicitação</a></li>
-                    <li><a th:href="@{'/quarto/' + ${solicitacao.id} + '/listaQuartos'}">Lista de solicitações da casa</a></li>
-                </ul>
-            </nav>
         </div>
 </main>
 </body>
