--- a/app/src/main/resources/templates/quarto/quarto.html
+++ b/app/src/main/resources/templates/quarto/quarto.html
@@ -8,48 +8,45 @@
 <main>
     <div  sec:authorize="hasAuthority(T(com.thoughtworks.aceleradora.login.dominio.Cargo).ASSISTENTE_SOCIAL.getNome())"> Você não tem autorização para acessar essa página</div>
     <div sec:authorize="hasAuthority(T(com.thoughtworks.aceleradora.login.dominio.Cargo).ADMINISTRADOR.getNome())">
+        <div class="container">
+        <div class="section">
+            <nav class="breadcrumb" aria-label="breadcrumbs">
+                <ul>
+                    <li><a th:href="@{'/bemvindo'}" class="has-text-black" href="#" aria-current="page">Inicio</a></li>
+                    <li><a th:href="@{'/solicitacao/casa/lista'}" class="has-text-black" href="#" aria-current="page">Solicitação</a></li>
+                    <li><a th:href="@{'/quarto/' + ${solicitacao.id} + '/listaQuartos'}" class="has-text-black" href="#" aria-current="page">Lista de solicitações da casa</a></li>
+                    <li><a th:href="@{'/quarto/' + ${solicitacao.id} + '/quarto/' + ${quarto.id}}">Dados quarto</a></li>
+                </ul>
+            </nav>
+        </div>
     <div th:include="@{./partes/cabecalhoDadosSolicitante}"/>
-
-
         <h1 class="title is-half centralizar espacamento-titulo" th:text="'Quarto: ' + ${quarto.nomeQuarto}"></h1>
-
         <div class="is-mobile is-centered">
             <h2 class="title is-2 is-half centralizar espacamento-titulo">Ocupado por:</h2>
-            <div class="section">
-                <nav class="breadcrumb" aria-label="breadcrumbs">
-                    <ul>
-                        <li><a th:href="@{'/bemvindo'}" class="has-text-black" href="#" aria-current="page">Inicio</a></li>
-                        <li><a th:href="@{'/solicitacao/casa/lista'}" class="has-text-black" href="#" aria-current="page">Solicitação</a></li>
-                        <li><a th:href="@{'/quarto/' + ${solicitacao.id} + '/listaQuartos'}" class="has-text-black" href="#" aria-current="page">Lista de solicitações da casa</a></li>
-                        <li><a th:href="@{'/quarto/' + ${solicitacao.id} + '/quarto/' + ${quarto.id}}">Dados quarto</a></li>
-                    </ul>
-                </nav>
-            </div>
-
             <th:block th:each="ocupante : ${ocupantes}">
                 <div class="centralizar">
                     <p>
                         <label>
-                        <strong>Nome:</strong>
-                    </label>
-                    <label th:text="${ocupante.nome}"></label>
-                </p>
-            </div>
-        </th:block>
-
+                            <strong>Nome:</strong>
+                        </label>
+                        <label th:text="${ocupante.nome}"></label>
+                    </p>
+                </div>
+            </th:block>
+        </div>
+        <div class="is-centered is-half centralizar espacamento" th:if="${quarto.getLeitosDisponiveis() > 0}">
+            <form th:action="@{/quarto/aceitar}" method="POST">
+                <input type="hidden" name="id" th:value="${solicitacao.id}">
+                <input type="hidden" name="idQuarto" th:value="${quarto.id}">
+                <button type="submit" class="button verde-viavida borda-arredondada"> Aceitar Solicitação </button>
+            </form>
+            <form th:action="@{/quarto/negar}" method="POST">
+                <input type="hidden" name="id" th:value="${solicitacao.id}">
+                <input type="hidden" name="idQuarto" th:value="${quarto.id}">
+                <button type="submit" class="button verde-viavida borda-arredondada"> Negar Solicitação</button>
+            </form>
+        </div>
     </div>
-    <div class="is-centered is-half centralizar espacamento" th:if="${quarto.getLeitosDisponiveis() > 0}">
-        <form th:action="@{/quarto/aceitar}" method="POST">
-            <input type="hidden" name="id" th:value="${solicitacao.id}">
-            <input type="hidden" name="idQuarto" th:value="${quarto.id}">
-            <button type="submit" class="button verde-viavida borda-arredondada"> Aceitar Solicitação </button>
-        </form>
-
-        <form th:action="@{/quarto/negar}" method="POST">
-            <input type="hidden" name="id" th:value="${solicitacao.id}">
-            <input type="hidden" name="idQuarto" th:value="${quarto.id}">
-            <button type="submit" class="button verde-viavida borda-arredondada"> Negar Solicitação</button>
-        </form>
     </div>
 </main>
 </body>
