--- a/app/src/main/resources/templates/registrarUsuario/registrar.html
+++ b/app/src/main/resources/templates/registrarUsuario/registrar.html
@@ -30,7 +30,7 @@
                 <div class="columns has-text-left">
                     <div class="column is-half">
                         <div class="control">
-                            <span>*Informe o Nome da Assistente Social:</span>
+                            <span>*Nome completo:</span>
                             <input class="input input-fancy borda-arredondada" th:field="*{nomeAssistente}" type="text" id="nomeAssistente">
                         </div>
                     </div>
@@ -38,7 +38,7 @@
                 <div class="columns has-text-left">
                     <div class="column is-half">
                         <div class="control">
-                            <span id="emailAssistente">*Informe o E-mail da Assistente Social:</span>
+                            <span id="emailAssistente">*E-mail:</span>
                             <input class="input input-fancy borda-arredondada" th:field="*{email}" type="text" id="emailDaAssistente">
                         </div>
                     </div>
@@ -46,7 +46,7 @@
                 <div class="columns has-text-left">
                     <div class="column is-half">
                         <div class="control">
-                            <span id="hospitalReferencia">*Informe o hospital de Referência da Assistente Social:</span>
+                            <span id="hospitalReferencia">*Hospital de Referência:</span>
                             <input class="input input-fancy borda-arredondada" th:field="*{hospitalReferencia}" type="text" id="hospitalDeReferencia">
                         </div>
                     </div>
@@ -54,7 +54,7 @@
                 <div class="columns has-text-left">
                     <div class="column is-half">
                         <div class="control">
-                            <span id="telefoneAss">*Informe o Telefone da Assistente Social:</span>
+                            <span id="telefoneAss">*Telefone:</span>
                             <input class="input input-fancy borda-arredondada" th:field="*{telefone}" type="text" id="telefoneAssistente">
                         </div>
                     </div>
@@ -62,13 +62,13 @@
             </div>
             <div class="columns has-text-left">
                 <div class="column is-half">
-                    <label>*Informe um usuário:</label>
+                    <label>*Nome de usuário:</label>
                     <input class="input input-fancy borda-arredondada" th:field="*{nome}" id = "first_name" type="text" name="nome">
                 </div>
             </div>
             <div class="columns has-text-left">
                 <div class="column is-half">
-                    <label>*Informe uma senha:</label>
+                    <label>*Senha:</label>
                     <input class="input input-fancy borda-arredondada" th:field="*{senha}" id="password" type="password" name="senha">
                 </div>
             </div>
