--- a/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoCasa.html
+++ b/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoCasa.html
@@ -20,7 +20,8 @@
                     </ul>
                 </nav>
             </div>
-        <div class="section">
+            <p class="title is-half centralizar has-text-centered espacamento">Lista de Solicitações</p>
+            <div class="section">
             <div class="columns is-multiline is-lefty">
                 <div th:each="solicitacao : ${solicitacoesCasa}">
                     <div class="column">
