--- a/app/src/main/resources/templates/solicitacao/index.html
+++ b/app/src/main/resources/templates/solicitacao/index.html
@@ -1,4 +1,4 @@
-<nav class="navbar" role="navigation" aria-label="main navigation">
+<nav class="navbar" role="navigation" aria-label="main navigation" xmlns:th="http://www.w3.org/1999/xhtml">
   <div class="navbar-brand">
     <a class="navbar-item" href="/">
       <p class="titulo-nav">HospeBem</p>
