--- a/app/src/main/resources/templates/inicio.html
+++ b/app/src/main/resources/templates/inicio.html
@@ -15,6 +15,7 @@
                 <a href="/solicitacao/hospital/lista"><li>Lista geral de solicitações hospital</li></a>
                 <a href="/solicitacao/listagemHospede"><li>Gerenciar Hospede</li></a>
                 <a href="/registrar"><li>Registrar</li></a>
+                <a href="/login"><li>Login</li></a>
             </ul>
         </nav>
     </div>
