--- a/app/src/main/resources/templates/login/login.html
+++ b/app/src/main/resources/templates/login/login.html
@@ -13,7 +13,6 @@
 <link href="/css/style.css" rel="stylesheet">
 <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 </head>
-
 <body>
 <header>
     <nav class="navbar is-mobile " role="navigation" aria-label="main navigation">
@@ -24,8 +23,6 @@
         </div>
     </nav>
 </header>
-<body>
-
 <main>
     <div class="container card-content valign center has-text-centered">
         <form th:action="@{/login}" method="POST" onsubmit="return validaLogin(event)">
@@ -35,28 +32,23 @@
             </div>
             <div class="columns">
                 <div class="column is-half">
-                    <p class="control has-icons-left has-icons-right ml-10">
+                    <p class="control has-icons-left has-icons-right margin-left-10">
                         <i class="fas fa-user"></i>
-                        <label for="">Usuário</label>
+                        <label>Usuário</label>
                     </p>
-                    <input class="validate input input-fancy borda-arredondada" id = "first_name" type="text" name="nome">
+                    <input class="validate input input-fancy borda-arredondada" id="first_name" type="text" name="nome">
                 </div>
             </div>
             <div class="columns">
                 <div class = "column is-half">
-                    <p class="control has-icons-left has-icons-right ml-10">
+                    <p class="control has-icons-left has-icons-right margin-left-10">
                         <i class="fas fa-lock"></i>
-                        <label for="">Senha</label>
+                        <label>Senha</label>
                     </p>
                     <input class="validate input input-fancy borda-arredondada" id="password" type="password" name="senha">
                 </div>
             </div>
-
-            <button class="button verde-viavida is-medium borda-arredondada" type="submit" name="action" onclick="">Entrar</button>
-
-            <div class="recuperar">
-                <p><a href="#">Esqueci minha senha</a></p>
-            </div>
+            <button class="button verde-viavida is-medium borda-arredondada" type="submit" name="action">Entrar</button>
         </form>
     </div>
 </main>
