--- a/app/src/main/resources/templates/login/login.html
+++ b/app/src/main/resources/templates/login/login.html
@@ -34,7 +34,7 @@
                 <div class="column is-half">
                     <p class="control has-icons-left has-icons-right margin-left-10">
                         <i class="fas fa-user"></i>
-                        <label>Usuário</label>
+                        <label for="first_name">Usuário</label>
                     </p>
                     <input class="validate input input-fancy borda-arredondada" id="first_name" type="text" name="nome">
                 </div>
@@ -43,7 +43,7 @@
                 <div class = "column is-half">
                     <p class="control has-icons-left has-icons-right margin-left-10">
                         <i class="fas fa-lock"></i>
-                        <label>Senha</label>
+                        <label for="password">Senha</label>
                     </p>
                     <input class="validate input input-fancy borda-arredondada" id="password" type="password" name="senha">
                 </div>
