<@cassia11, @matheus-malta, @DiovaneMendes> Arruma comentarios PR
Co-authored-by: cassia11 <cassiagomes0102@gmail.com>
Co-authored-by: DiovaneMendes <diovane.m.mendes@gmail.com>

--- a/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoHospital.html
+++ b/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoHospital.html
@@ -24,7 +24,7 @@
                 </form>
                 <div class="section">
                     <div class="columns is-multiline is-lefty">
-                        <div th:each="solicitacao : ${solicitacoesHospital}" th:if="${solicitacao.nomeSolicitante==usuarioLogado}">
+                        <div th:each="solicitacao : ${solicitacoesHospital}">
                             <div class="column">
                                 <div class="box">
                                     <strong><span>Nome:</span></strong>
