--- a/app/src/main/resources/templates/registrarUsuario/registrar.html
+++ b/app/src/main/resources/templates/registrarUsuario/registrar.html
@@ -20,9 +20,9 @@
                 <p th:each="err : ${#fields.errors()}" th:text="${err}"></p>
             </div>
 
-            <div class="columns has-text-left">
-                <div class = "column is-half" >
-                    <label th:field="*{cargo}" >Tipo:</label>
+            <div class="columns has-text-left" id="labelCargo">
+                <div class = "column is-half">
+                    <label th:field="*{cargo}">Tipo:</label>
                     <input class="input-radio" th:id="${cargo}" th:each="cargo : ${cargos}" type="radio" name="cargo" th:value="${cargo}" th:text="${cargo.nome}">
                 </div>
             </div>
@@ -30,7 +30,7 @@
                 <div class="columns has-text-left">
                     <div class="column is-half">
                         <div class="control">
-                            <span>*Nome completo:</span>
+                            <label for="nomeAssistente">*Nome Completo:</label>
                             <input class="input input-fancy borda-arredondada" th:field="*{nomeAssistente}" type="text" id="nomeAssistente">
                         </div>
                     </div>
@@ -38,7 +38,7 @@
                 <div class="columns has-text-left">
                     <div class="column is-half">
                         <div class="control">
-                            <span id="emailAssistente">*E-mail:</span>
+                            <label for="emailDaAssistente" id="emailAssistente">*E-mail:</label>
                             <input class="input input-fancy borda-arredondada" th:field="*{email}" type="text" id="emailDaAssistente">
                         </div>
                     </div>
@@ -46,7 +46,7 @@
                 <div class="columns has-text-left">
                     <div class="column is-half">
                         <div class="control">
-                            <span id="hospitalReferencia">*Hospital de Referência:</span>
+                            <label for="hospitalDeReferencia" id="hospitalReferencia">*Hospital de Referência:</label>
                             <input class="input input-fancy borda-arredondada" th:field="*{hospitalReferencia}" type="text" id="hospitalDeReferencia">
                         </div>
                     </div>
@@ -54,7 +54,7 @@
                 <div class="columns has-text-left">
                     <div class="column is-half">
                         <div class="control">
-                            <span id="telefoneAss">*Telefone:</span>
+                            <label for="telefoneAssistente" id="telefoneAss">*Telefone:</label>
                             <input class="input input-fancy borda-arredondada" th:field="*{telefone}" type="text" id="telefoneAssistente">
                         </div>
                     </div>
@@ -62,13 +62,13 @@
             </div>
             <div class="columns has-text-left">
                 <div class="column is-half">
-                    <label>*Nome de usuário:</label>
-                    <input class="input input-fancy borda-arredondada" th:field="*{nome}" id = "first_name" type="text" name="nome">
+                    <label for="first-name">*Nome de usuário:</label>
+                    <input class="input input-fancy borda-arredondada" th:field="*{nome}" id="first-name" type="text" name="nome">
                 </div>
             </div>
             <div class="columns has-text-left">
                 <div class="column is-half">
-                    <label>*Senha:</label>
+                    <label for="password">*Senha:</label>
                     <input class="input input-fancy borda-arredondada" th:field="*{senha}" id="password" type="password" name="senha">
                 </div>
             </div>
