--- a/app/src/main/resources/templates/bemvindo/bemvindo.html
+++ b/app/src/main/resources/templates/bemvindo/bemvindo.html
@@ -31,6 +31,9 @@
                                     <div class="board-item-content"><a href="/solicitacao/listagemHospede">Gerenciar Hospedes</a></div>
                                 </div>
                                 <div class="board-item">
+                                    <div class="board-item-content"><a th:href="@{/listaUsuarios}">Gerenciar Usuários</a></div>
+                                </div>
+                                <div class="board-item">
                                     <div class="board-item-content"><a href="/registrar">Registrar usuários</a></div>
                                 </div>
                                 <div class="board-item">
