<@vicfraga, @brendamoniqueb> corrige camelCase registro

--- a/app/src/main/resources/templates/registrarUsuario/registrar.html
+++ b/app/src/main/resources/templates/registrarUsuario/registrar.html
@@ -64,8 +64,8 @@
             </div>
             <div class="columns has-text-left">
                 <div class="column is-half">
-                    <label for="first-name">*Nome de usuário:</label>
-                    <input class="input input-fancy borda-arredondada" th:field="*{nome}" id="first-name" type="text" name="nome">
+                    <label for="firstName">*Nome de usuário:</label>
+                    <input class="input input-fancy borda-arredondada" th:field="*{nome}" id="firstName" type="text" name="nome">
                 </div>
             </div>
             <div class="columns has-text-left">
