--- a/app/src/main/resources/templates/login/login.html
+++ b/app/src/main/resources/templates/login/login.html
@@ -34,9 +34,9 @@
                 <div class="column is-half">
                     <p class="control has-icons-left has-icons-right margin-left-10">
                         <i class="fas fa-user"></i>
-                        <label for="first-name">Usuário</label>
+                        <label for="firstName">Usuário</label>
                     </p>
-                    <input class="validate input input-fancy borda-arredondada" id="first-name" type="text" name="nome">
+                    <input class="validate input input-fancy borda-arredondada" id="firstName" type="text" name="nome">
                 </div>
             </div>
             <div class="columns">
