<@eduarda96, @matheus-malta> Renderiza genero
Co-authored-by: eduarda96 <eduarda.bortoletti96@gmail.com>

--- a/app/src/main/resources/templates/solicitacao/cadastro.html
+++ b/app/src/main/resources/templates/solicitacao/cadastro.html
@@ -217,11 +217,11 @@
                             <div class="field">
                                 <div class="control margin-invisible input-radio" id="labelAcomp">
                                     <label>
-                                        <input class="generoA1" type="radio" value="F" th:field="*{acompanhantes[__${acompIndex.index}__].genero}">
+                                        <input class="generoA1" type="radio" value="Feminino" th:field="*{acompanhantes[__${acompIndex.index}__].genero}">
                                         <span>Feminino</span>
                                     </label>
                                     <label>
-                                        <input class="generoA2" type="radio" value="M" th:field="*{acompanhantes[__${acompIndex.index}__].genero}">
+                                        <input class="generoA2" type="radio" value="Masculino" th:field="*{acompanhantes[__${acompIndex.index}__].genero}">
                                         <span>Masculino</span>
                                     </label>
                                 </div>
