--- a/app/src/main/resources/templates/solicitacao/editaPaciente.html
+++ b/app/src/main/resources/templates/solicitacao/editaPaciente.html
@@ -195,11 +195,11 @@
                             </div>
                             <div class="control">
                                 <label>
-                                    <input class="genero" type="radio" value="F" th:field="*{acompanhantes[__${acompIndex.index}__].genero}">
+                                    <input class="genero" type="radio" value="Feminino" th:field="*{acompanhantes[__${acompIndex.index}__].genero}">
                                     <span>Feminino</span>
                                 </label>
                                 <label>
-                                    <input class="genero" type="radio" value="M" th:field="*{acompanhantes[__${acompIndex.index}__].genero}">
+                                    <input class="genero" type="radio" value="Masculino" th:field="*{acompanhantes[__${acompIndex.index}__].genero}">
                                     <span>Masculino</span>
                                 </label>
                             </div>
